<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/indigo100"
    tools:context=".newAcc">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"

        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/enter_phone_number_to_register"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/sayhi_will_send_otp_on_your_phone_number_for_verification"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/line1"
        app:layout_constraintStart_toStartOf="@+id/line1"
        app:layout_constraintTop_toBottomOf="@+id/line1">

        <EditText
            android:id="@+id/phoneBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_gravity="center"
            android:background="@drawable/animated_input"
            android:drawableStart="@drawable/custom_phone_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textColor="@color/indigo700"
            android:textColorHint="@color/clr_grey_text"
            android:textCursorDrawable="@drawable/text_cursor"
            android:autofillHints=""
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_btn"
            android:text="@string/Continue"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/already_have_account"
                android:textSize="18sp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/logIn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/log_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textColor="@color/indigo700"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>