<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/indigo100"
    tools:context=".verifyNo">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"

        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_phone_number"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/userPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_923123456789"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="#546E7A"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_otp_to_verify_your_phone_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15sp"
            android:paddingTop="32dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintTop_toBottomOf="@+id/line1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/otpView"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginEnd="7dp"
                android:autofillHints=" "
                android:background="@drawable/animated_input"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/indigo700"
                android:textCursorDrawable="@drawable/text_cursor"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />


        </LinearLayout>

        <Button
            android:id="@+id/verifyOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/ripple_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/didn_t_receive_otp"
                android:textSize="18sp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/resend_otp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/resend"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textColor="@color/indigo700"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>