<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/indigo100"
    tools:context=".newPass">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"

        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/create_a_new_password"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/your_password_at_least_have_8_character"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/line1"
        app:layout_constraintStart_toStartOf="@+id/line1"
        app:layout_constraintTop_toBottomOf="@+id/line1">

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_gravity="center"
            android:background="@drawable/animated_input"
            android:drawableStart="@drawable/custom_pass_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textColor="@color/indigo700"
            android:textColorHint="@color/clr_grey_text"
            android:textCursorDrawable="@drawable/text_cursor"
            android:autofillHints=""
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/confirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:background="@drawable/animated_input"
            android:drawableStart="@drawable/custom_pass_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:singleLine="true"
            android:textColor="@color/indigo700"
            android:textColorHint="@color/clr_grey_text"
            android:textCursorDrawable="@drawable/text_cursor"
            tools:ignore="RtlSymmetry" />
        <Button
            android:id="@+id/continueBtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_btn"
            android:text="@string/Continue"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>